==> MikroElektronika/mikroSDK-v1.0/mikroBUS API/PIC/c/mikromedia_PIC18FK/__mm_PIC18FK_GPIO.c <==
/*

  This file is part of mikroSDK.

  Copyright (c) 2017, MikroElektonika - http://www.mikroe.com

  All rights reserved.

----------------------------------------------------------------------------- */

#include "__t_PIC.h"

const uint8_t _MIKROBUS_ERR_PIN         = 1;

const uint8_t _GPIO_OUTPUT              = 0;
const uint8_t _GPIO_INPUT               = 1;
                
const uint8_t _MIKROBUS_AN_PIN          = 0;
const uint8_t _MIKROBUS_RST_PIN         = 1;
const uint8_t _MIKROBUS_CS_PIN          = 2;
const uint8_t _MIKROBUS_SCK_PIN         = 3;
const uint8_t _MIKROBUS_MISO_PIN        = 4;
const uint8_t _MIKROBUS_MOSI_PIN        = 5;
const uint8_t _MIKROBUS_PWM_PIN         = 6;
const uint8_t _MIKROBUS_INT_PIN         = 7;
const uint8_t _MIKROBUS_RX_PIN          = 8;
const uint8_t _MIKROBUS_TX_PIN          = 9;
const uint8_t _MIKROBUS_SCL_PIN         = 10;
const uint8_t _MIKROBUS_SDA_PIN         = 11;

static uint8_t _getAN_1  ()                   { return PORTA.B3;   }
static uint8_t _getRST_1 ()                   { return PORTB.B5;   }
static uint8_t _getCS_1  ()                   { return PORTB.B6;   }
static uint8_t _getSCK_1 ()                   { return PORTC.B3;   }
static uint8_t _getMISO_1()                   { return PORTC.B4;   }
static uint8_t _getMOSI_1()                   { return PORTC.B5;   }
static uint8_t _getPWM_1 ()                   { return PORTC.B2;   }
static uint8_t _getINT_1 ()                   { return PORTB.B0;   }
static uint8_t _getRX_1  ()                   { return PORTG.B2;   }
static uint8_t _getTX_1  ()                   { return PORTG.B7;   }
static uint8_t _getSCL_1 ()                   { return PORTD.B6;   }
static uint8_t _getSDA_1 ()                   { return PORTD.B5;   }
static void _setAN_1  (uint8_t value)         { LATA3_bit = value; }
static void _setRST_1 (uint8_t value)         { LATB5_bit = value; }
static void _setCS_1  (uint8_t value)         { LATB6_bit = value; }
static void _setSCK_1 (uint8_t value)         { LATC3_bit = value; }
static void _setMISO_1(uint8_t value)         { LATC4_bit = value; }
static void _setMOSI_1(uint8_t value)         { LATC5_bit = value; }
static void _setPWM_1 (uint8_t value)         { LATC2_bit = value; }
static void _setINT_1 (uint8_t value)         { LATB0_bit = value; }
static void _setRX_1  (uint8_t value)         { LATG2_bit = value; }
static void _setTX_1  (uint8_t value)         { LATG7_bit = value; }
static void _setSCL_1 (uint8_t value)         { LATD6_bit = value; }
static void _setSDA_1 (uint8_t value)         { LATD5_bit = value; }

static uint8_t _getAN_2  ()                   { return PORTA.B4;   }
static uint8_t _getRST_2 ()                   { return PORTB.B7;   }
static uint8_t _getCS_2  ()                   { return PORTH.B0;   }
static uint8_t _getSCK_2 ()                   { return PORTC.B3;   }
static uint8_t _getMISO_2()                   { return PORTC.B4;   }
static uint8_t _getMOSI_2()                   { return PORTC.B5;   }
static uint8_t _getPWM_2 ()                   { return PORTC.B6;   }
static uint8_t _getINT_2 ()                   { return PORTB.B1;   }
static uint8_t _getRX_2  ()                   { return PORTG.B2;   }
static uint8_t _getTX_2  ()                   { return PORTG.B7;   }
static uint8_t _getSCL_2 ()                   { return PORTD.B6;   }
static uint8_t _getSDA_2 ()                   { return PORTD.B5;   }
static void _setAN_2  (uint8_t value)         { LATA4_bit = value; }
static void _setRST_2 (uint8_t value)         { LATB7_bit = value; }
static void _setCS_2  (uint8_t value)         { LATH0_bit = value; }
static void _setSCK_2 (uint8_t value)         { LATC3_bit = value; }
static void _setMISO_2(uint8_t value)         { LATC4_bit = value; }
static void _setMOSI_2(uint8_t value)         { LATC5_bit = value; }
static void _setPWM_2 (uint8_t value)         { LATC6_bit = value; }
static void _setINT_2 (uint8_t value)         { LATB1_bit = value; }
static void _setRX_2  (uint8_t value)         { LATG2_bit = value; }
static void _setTX_2  (uint8_t value)         { LATG7_bit = value; }
static void _setSCL_2 (uint8_t value)         { LATD6_bit = value; }
static void _setSDA_2 (uint8_t value)         { LATD5_bit = value; }

static T_mikrobus_ret _gpioInit_1(T_mikrobus_pin pin, T_gpio_dir direction)
{
    switch( pin ) 
    {
        case _MIKROBUS_AN_PIN    : ANSELA3_bit = 0; TRISA3_bit = direction; break;
        case _MIKROBUS_RST_PIN   : ANSELB5_bit = 0; TRISB5_bit = direction; break;
        case _MIKROBUS_CS_PIN    : ANSELB6_bit = 0; TRISB6_bit = direction; break;
        case _MIKROBUS_SCK_PIN   : TRISC3_bit = direction; break;
        case _MIKROBUS_MISO_PIN  : TRISC4_bit = direction; break;
        case _MIKROBUS_MOSI_PIN  : TRISC5_bit = direction; break;
        case _MIKROBUS_PWM_PIN   : TRISC2_bit = direction; break;
        case _MIKROBUS_INT_PIN   : ANSELB0_bit = 0; TRISB0_bit = direction; break;
        case _MIKROBUS_RX_PIN    : ANSELG2_bit = 0; TRISG2_bit = direction; break;
        case _MIKROBUS_TX_PIN    : ANSELG7_bit = 0; TRISG7_bit = direction; break;
        case _MIKROBUS_SCL_PIN   : ANSELD6_bit = 0; TRISD6_bit = direction; break;
        case _MIKROBUS_SDA_PIN   : ANSELD5_bit = 0; TRISD5_bit = direction; break;
        default                  : return _MIKROBUS_ERR_PIN;
    }
    return 0;
}

static T_mikrobus_ret _gpioInit_2(T_mikrobus_pin pin, T_gpio_dir direction)
{
    switch( pin ) 
    {
        case _MIKROBUS_AN_PIN    : ANSELA4_bit = 0; TRISA4_bit = direction; break;
        case _MIKROBUS_RST_PIN   : ANSELB7_bit = 0; TRISB7_bit = direction; break;
        case _MIKROBUS_CS_PIN    : ANSELH0_bit = 0; TRISH0_bit = direction; break;
        case _MIKROBUS_SCK_PIN   : TRISC3_bit = direction; break;
        case _MIKROBUS_MISO_PIN  : TRISC4_bit = direction; break;
        case _MIKROBUS_MOSI_PIN  : TRISC5_bit = direction; break;
        case _MIKROBUS_PWM_PIN   : TRISC6_bit = direction; break;
        case _MIKROBUS_INT_PIN   : ANSELB1_bit = 0; TRISB1_bit = direction; break;
        case _MIKROBUS_RX_PIN    : ANSELG2_bit = 0; TRISG2_bit = direction; break;
        case _MIKROBUS_TX_PIN    : ANSELG7_bit = 0; TRISG7_bit = direction; break;
        case _MIKROBUS_SCL_PIN   : ANSELD6_bit = 0; TRISD6_bit = direction; break;
        case _MIKROBUS_SDA_PIN   : ANSELD5_bit = 0; TRISD5_bit = direction; break;
        default                  : return _MIKROBUS_ERR_PIN;
    }
    return 0;
}


/* -------------------------------------------------------------------------- */
/*

  Copyright (c) 2017, MikroElektonika - http://www.mikroe.com

  All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:

1. Redistributions of source code must retain the above copyright
   notice, this list of conditions and the following disclaimer.

2. Redistributions in binary form must reproduce the above copyright
   notice, this list of conditions and the following disclaimer in the
   documentation and/or other materials provided with the distribution.

3. All advertising materials mentioning features or use of this software
   must display the following acknowledgement:
   This product includes software developed by the MikroElektonika.

4. Neither the name of the MikroElektonika nor the
   names of its contributors may be used to endorse or promote products
   derived from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY MIKROELEKTRONIKA ''AS IS'' AND ANY
EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL MIKROELEKTRONIKA BE LIABLE FOR ANY
DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

----------------------------------------------------------------------------- */
